add team names to game object, filter by started at when same amount of goals, unit tests